<resources>
    <string name="app_name">K-beer</string>
    <string name="login">Entrar</string>
    <string name="input_name">Escribe tu nombre</string>
    <string name="preference_name">PREFERENCES_NAME</string>
    <string name="preference">PREFERENCES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_beer_list">Beers</string>
    <string name="loading">Cargando..</string>
    <string name="ingredients">Ingredientes</string>
    <string name="attenuation">Atenuación</string>
    <string name="abv">Alcohol</string>
    <string name="ibu">Lúpulos</string>
    <string name="ph">Ph</string>
    <string name="srm">SRM</string>
    <string name="brewers_tips">Consejos de consumo</string>
    <string name="food_pairing">Recomendaciones de alimentos</string>
    <string name="malt">Malta</string>
    <string name="name">Nombre:</string>
    <string name="cant">Cantidad:</string>
</resources>