<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/pa_default"
            android:background="?attr/colorPrimary">

            <ImageView
                android:layout_marginTop="@dimen/space_y_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon"
                android:id="@+id/icon_app"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/cerveza"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/titleApp"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space_y_login"
                app:layout_constraintTop_toBottomOf="@id/icon_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/edtName"/>


            <EditText
                android:id="@+id/edtName"
                android:layout_marginTop="@dimen/space_y_login"
                android:layout_marginHorizontal="@dimen/ma_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:paddingVertical="@dimen/pa_default"
                android:paddingHorizontal="@dimen/pa_lg"
                android:textColor="@color/black"
                android:textSize="@dimen/text_default"
                android:hint="@string/input_name"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_y_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/pa_md"
                android:textSize="@dimen/text_default"
                android:paddingHorizontal="@dimen/pa_lg"
                android:backgroundTint="?attr/colorButtonNormal"
                app:cornerRadius="@dimen/radius_default"
                app:layout_constraintTop_toBottomOf="@id/edtName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>