<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.lesr.k_beer.model.Beer"/>
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.BeerDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Ingredientes"
                android:elevation="25dp"
                android:id="@+id/btnIngredients"
                android:backgroundTint="?attr/colorAccent"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:padding="@dimen/pa_default"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/ma_default"
                android:layout_height="@dimen/image_beer_detail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/image_detail"
                loadImage="@{data.image_url}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/ma_default"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{data.first_brewed}"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:paddingHorizontal="@dimen/pa_default"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ma_default"
                android:id="@+id/values_beer"
                app:layout_constraintTop_toBottomOf="@id/image_detail"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.20">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorContainer"
                        style="@style/TextLevelsBeer"
                        android:text="@string/attenuation"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        app:floatToString="@{data.attenuation_level}"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorContainer"
                        style="@style/TextLevelsBeer"
                        android:text="@string/abv"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        app:floatToString="@{data.abv}"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        android:background="?attr/colorContainer"
                        android:text="@string/ibu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        app:floatToString="@{data.ibu}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        android:background="?attr/colorContainer"
                        android:text="@string/ph"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        app:floatToString="@{data.ph}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        android:background="?attr/colorContainer"
                        android:text="@string/srm"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextLevelsBeer"
                        app:floatToString="@{data.srm}"/>

                </LinearLayout>


            </LinearLayout>







            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/values_beer"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:padding="@dimen/pa_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_description"
                        android:id="@+id/description"
                        android:text="@{data.description}"/>

                    <TextView
                        android:id="@+id/tips_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/pa_default"
                        android:layout_marginVertical="@dimen/ma_default"
                        android:background="?attr/colorSecondary"
                        android:text="@string/brewers_tips"
                        android:textAlignment="center"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="@dimen/card_title" />


                    <TextView
                        android:id="@+id/tips"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/pa_default"
                        android:text="@{data.brewers_tips}"
                        android:textAlignment="center"
                        android:textSize="@dimen/card_title" />


                    <TextView
                        android:id="@+id/recomendations_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/pa_default"
                        android:layout_marginVertical="@dimen/ma_default"
                        android:background="?attr/colorSecondary"
                        android:text="@string/food_pairing"
                        android:textAlignment="center"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="@dimen/card_title" />

                    <TextView
                        android:id="@+id/recomendations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/pa_default"
                        android:textAlignment="center"
                        android:textSize="@dimen/card_title"
                        app:arrayToString="@{data.food_pairing}" />



                </LinearLayout>

            </ScrollView>








        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>